Added Social media link to its buttons

--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
     <h2> Lets Work Together... </h2>
     <h4> How do you take your coffee? </h4>
     <div class="social-media">
-      <a href="#" class="fa fa-facebook" id= "contact-btn"> Facebook</a>
-      <a href="#" class="fa fa-twitter" id= "contact-btn"> Twitter</a>
-      <a href="#" class="fa fa-google" id= "contact-btn">  Send an Email</a>
-      <a href="#" class="fa fa-reddit" id= "contact-btn"> Gitup</a>
+      <a href="https://web.facebook.com/oneloveme?_rdc=1&_rdr" class="fa fa-facebook" id= "contact-btn"> Facebook</a>
+      <a href="https://mobile.twitter.com/iam_omowale" class="fa fa-twitter" id= "contact-btn"> Twitter</a>
+      <a href="mailto: omowaledev@gmail.com" class="fa fa-google" id= "contact-btn">  Send an Email</a>
+      <a href="https://github.com/iamomowale" class="fa fa-reddit" id= "contact-btn"> Gitup</a>
       <a href="#" class="fa fa-rss" id= "contact-btn"> Call Me</a>
     </div>
     
